--- a/src/layout/Header/Header.scss
+++ b/src/layout/Header/Header.scss
@@ -23,7 +23,8 @@
 		height: 100vh;
 		padding-top: 20px;
 		background: linear-gradient(#211F20, #44403F);
-		z-index: 100;
+		transform: translate(-100%, 0);
+		transition: all 0.7s ease-in-out;
 
 		h2 {
 			color: white;
@@ -52,14 +53,23 @@
 				}
 			}
 		}
-	}
 
-	.nav--opened {
-		display: block;
-	}
+		&--opened {
+			display: block;
+			transform: translate(0%, 0);
+			transition: all 0.3s ease-in-out;
+			z-index: 110;
+			opacity: 1;
+			visibility: visible;
+		}
 
-	.nav--closed {
-		display: none;
+		&--closed {
+			z-index: -100;
+			opacity: 0;
+			transform: translate(-100%, 0);
+			transition: all 0.7s ease-in-out;
+			visibility: hidden;
+		}
 	}
 }
 
@@ -83,45 +93,48 @@
 	}
 }
 
-.js-burger--opened {
-	height: 30px;
-	position: absolute;
-	right: 0;
-
-	span {
-		background-color: white;
+.js-burger {
+	&--opened {
+		height: 30px;
 		position: absolute;
-		width: 25px;
+		right: 0;
 
-		&:nth-child(1) {
-			height: 4px;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%) rotate(45deg);
-		}
+		span {
+			background-color: white;
+			position: absolute;
+			width: 25px;
 
-		&:nth-child(2) {
-			height: 4px;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%) rotate(-45deg);
-		}
+			&:nth-child(1) {
+				height: 4px;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%) rotate(45deg);
+			}
 
-		&:nth-child(3) {
-			opacity: 0;
+			&:nth-child(2) {
+				height: 4px;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%) rotate(-45deg);
+			}
+
+			&:nth-child(3) {
+				opacity: 0;
+			}
 		}
 	}
 }
 
 .burger {
 	position: relative;
-	z-index: 120;
+	z-index: 150;
 	display: grid;
 	justify-content: center;
 	align-items: center;
 	margin-bottom: 10px;
 	top: 4px;
     left: 2px;
+	padding-right: 4px;
 
 	&__text {
 		text-transform: uppercase;
@@ -216,31 +229,24 @@
 	cursor: pointer;
 }
 
-.contacts-block {
+.contacts {
 	display: flex;
 	align-items: center;
 	white-space: nowrap;
+
 	&__info {
 		display: block;
 	}
 
-	&__info-item {
+	&__text {
 		font-style: normal;
 		font-weight: 400;
 		font-size: 14px;
 		line-height: 20px;
-
 		color: #cfcfcf;
-
-		&_bold {
-			font-weight: 800;
-
-			text-decoration: none;
-			color: #fff;
-		}
 	}
 
-	&__call-img {
+	&__link {
 		width: 32px;
 		height: 32px;
 		border-radius: 50%;
@@ -248,6 +254,13 @@
 		position: relative;
 
 		margin-right: 10px;
+	}
+
+	&__link.link {
+		background: transparent;
+		font-weight: 800;
+		text-decoration: none;
+		color: #fff;
 	}
 }
 
@@ -308,7 +321,7 @@
 			margin-top: 10px;
 		}
 
-		.contacts-block {
+		.contacts {
 			order: 3;
 			margin: 0 10px;
 			display: none;
@@ -340,7 +353,7 @@
 			&__counter-block {
 				display: flex;
 				position: absolute;
-				bottom: -10px;
+				top: -10px;
 				right: -10px;
 				width: 24px;
 				height: 24px;
@@ -392,7 +405,7 @@
 			margin: 0 10px;
 		}
 
-		.contacts-block {
+		.contacts {
 			order: 3;
 			margin: 0 10px;
 			display: flex;
@@ -400,18 +413,14 @@
 
 		.cart {
 			order: 4;
+			min-width: 150px;
+			max-width: 300px;
+			padding-right: 13px;
 			display: flex;
 
 			.buyIcon {
 				display: none;
 			}
-		}
-
-		.cart {
-			order: 4;
-			min-width: 150px;
-			max-width: 300px;
-			padding-right: 13px;
 
 			&__text {
 				border-right: 1px solid rgba(255, 255, 255, 0.3);
@@ -466,9 +475,6 @@
 		}
 
 		.cart {
-			order: 4;
-			min-width: 150px;
-			max-width: 300px;
 			margin: 0 0 0 auto;
 		}
 	}
