--- a/src/layout/Header/Header.scss
+++ b/src/layout/Header/Header.scss
@@ -71,6 +71,12 @@
 			visibility: hidden;
 		}
 	}
+
+	&__cart {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
 }
 
 .burger-wrapper {
@@ -208,7 +214,7 @@
 	outline: none;
 	font-style: normal;
 	font-weight: 400;
-	font-size: 18px;
+	font-size: 12px;
 	line-height: 21px;
 	color: #cfcfcf;
 	padding-left: 2%;
@@ -216,7 +222,7 @@
 	&::placeholder {
 		font-style: normal;
 		font-weight: 400;
-		font-size: 18px;
+		font-size: 12px;
 		line-height: 21px;
 		color: #cfcfcf;
 	}
@@ -264,39 +270,6 @@
 	}
 }
 
-.cart {
-	background: linear-gradient(114.93deg, #618967 5.11%, #72a479 94%);
-	border: 0;
-	border-radius: 10px;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-
-	&__counter-block {
-		display: flex;
-		width: 24px;
-		height: 24px;
-		border-radius: 50%;
-		background: #fff;
-	}
-
-	&__counter {
-		margin: auto;
-		font-weight: 600;
-		font-size: 14px;
-		line-height: 14px;
-		color: #403c3b;
-	}
-
-	&__text {
-		font-weight: 600;
-		font-size: 16px;
-		line-height: 17px;
-		color: #fff;
-
-	}
-}
-
 @media screen and (min-width: 320px) {
 	//mobile
 	.header {
@@ -327,46 +300,18 @@
 			display: none;
 		}
 
-		.cart {
+		&__cart {
+			display: grid;
+			max-width: min-content;
+			padding: 8px 8px 10px 8px;
 			order: 1;
 			grid-column: 6/7;
 			justify-self: end;
 			min-width: 62px;
 			min-height: 56px;
-			position: relative;
-			display: grid;
-			max-width: min-content;
-			padding: 8px 8px 10px 8px;
 
 			.buyIcon {
-				display: block;
 				padding: 2px;
-			}
-
-			&__text {
-				border-top: 1px solid rgba(255, 255, 255, 0.3);
-				padding: 0;
-				font-size: 12px;
-				text-transform: lowercase;
-			}
-
-			&__counter-block {
-				display: flex;
-				position: absolute;
-				top: -10px;
-				right: -10px;
-				width: 24px;
-				height: 24px;
-				border-radius: 50%;
-				background: #fff;
-			}
-
-			&__counter {
-				margin: auto;
-				font-weight: 600;
-				font-size: 14px;
-				line-height: 14px;
-				color: #403c3b;
 			}
 		}
 	}
@@ -385,8 +330,6 @@
 	}
 }
 
-
-
 @media screen and (min-width: 768px) {
 	//tablet
 	.header {
@@ -396,6 +339,18 @@
 
 		&__logo  {
 			order: 1;
+		}
+
+		&__cart {
+			order: 4;
+			min-width: 150px;
+			max-width: 300px;
+			padding-right: 13px;
+			display: flex;
+
+			.buyIcon {
+				padding: 2px;
+			}
 		}
 
 		.input-block {
@@ -410,45 +365,6 @@
 			margin: 0 10px;
 			display: flex;
 		}
-
-		.cart {
-			order: 4;
-			min-width: 150px;
-			max-width: 300px;
-			padding-right: 13px;
-			display: flex;
-
-			.buyIcon {
-				display: none;
-			}
-
-			&__text {
-				border-right: 1px solid rgba(255, 255, 255, 0.3);
-				padding: 10px 20px 10px 17px;
-				text-transform: none;
-				border-top: none;
-				font-size: 14px;
-			}
-
-			&__counter-block {
-				display: flex;
-				position: static;
-				width: 24px;
-				height: 24px;
-				border-radius: 50%;
-				background: #fff;
-				margin-left: 12px;
-			}
-
-			&__counter {
-				position: static;
-				margin: auto;
-				font-weight: 600;
-				font-size: 14px;
-				line-height: 14px;
-				color: #403c3b;
-			}
-		}
 	}
 
 	.burger-wrapper {
@@ -461,6 +377,7 @@
 	.header {
 		&__logo {
 			margin: 0 auto 0 0;
+			padding-right: 10px;
 		}
 		.input-block {
 			order: 2;
@@ -474,7 +391,28 @@
 			}
 		}
 
-		.cart {
+		.input-search {
+			width: 100%;
+			background: #504b4a;
+			border: 0;
+			outline: none;
+			font-style: normal;
+			font-weight: 400;
+			font-size: 18px;
+			line-height: 21px;
+			color: #cfcfcf;
+			padding-left: 2%;
+
+			&::placeholder {
+				font-style: normal;
+				font-weight: 400;
+				font-size: 18px;
+				line-height: 21px;
+				color: #cfcfcf;
+			}
+		}
+
+		&__cart {
 			margin: 0 0 0 auto;
 		}
 	}
@@ -491,6 +429,7 @@
 		height: 100vh;
 		width: 100vw;
 		z-index: 100;
+		cursor: pointer;
 	}
 
 	&--closed {
