--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -2,6 +2,7 @@
 	background: linear-gradient(114.93deg, #618967 5.11%, #72a479 94%);
 	border: 0;
 	border-radius: 10px;
+	cursor: pointer;
 
 
 	&__counter-block {
