--- a/src/layout/Header/Header.scss
+++ b/src/layout/Header/Header.scss
@@ -373,7 +373,7 @@
 	}
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: $desktop) {
 	//desktop
 	.header {
 		&__logo {
