--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -1,5 +1,7 @@
+@import '../../globalStyles//variables.scss';
+
 .cart {
-	background: linear-gradient(114.93deg, #618967 5.11%, #72a479 94%);
+	background: $green;
 	border: 0;
 	border-radius: 10px;
 	cursor: pointer;
@@ -10,7 +12,7 @@
 		width: 24px;
 		height: 24px;
 		border-radius: 50%;
-		background: #fff;
+		background: $white;
 	}
 
 	&__counter {
@@ -18,14 +20,14 @@
 		font-weight: 600;
 		font-size: 14px;
 		line-height: 14px;
-		color: #403c3b;
+		color: $blackBackground;
 	}
 
 	&__text {
 		font-weight: 600;
 		font-size: 16px;
 		line-height: 17px;
-		color: #fff;
+		color: $white;
 
 	}
 }
@@ -40,7 +42,7 @@
 		}
 
 		&__text {
-			border-top: 1px solid rgba(255, 255, 255, 0.3);
+			border-top: 1px solid $grey;
 			padding: 0;
 			font-size: 12px;
 			text-transform: lowercase;
@@ -54,7 +56,7 @@
 			width: 24px;
 			height: 24px;
 			border-radius: 50%;
-			background: #fff;
+			background: $white;
 		}
 
 		&__counter {
@@ -62,7 +64,7 @@
 			font-weight: 600;
 			font-size: 14px;
 			line-height: 14px;
-			color: #403c3b;
+			color: $blackBackground;
 		}
 	}
 }
@@ -76,7 +78,7 @@
 		}
 
 		&__text {
-			border-right: 1px solid rgba(255, 255, 255, 0.3);
+			border-right: 1px solid $grey;
 			padding: 10px 20px 10px 17px;
 			text-transform: none;
 			border-top: none;
@@ -89,7 +91,7 @@
 			width: 24px;
 			height: 24px;
 			border-radius: 50%;
-			background: #fff;
+			background: $white;
 			margin-left: 12px;
 		}
 
@@ -99,7 +101,7 @@
 			font-weight: 600;
 			font-size: 14px;
 			line-height: 14px;
-			color: #403c3b;
+			color: $blackBackground;
 		}
 	}
 }
