--- a/src/layout/Header/Header.scss
+++ b/src/layout/Header/Header.scss
@@ -49,7 +49,7 @@
 			margin-left: 10px;
 
 				&:focus {
-					border: 1px solid white;
+					border: 1px solid $white;
 				}
 			}
 		}
@@ -409,7 +409,7 @@
 				font-weight: 400;
 				font-size: 18px;
 				line-height: 21px;
-				color: #cfcfcf;
+				color: $grey;
 			}
 		}
 
