--- a/src/globalStyles/variables.scss
+++ b/src/globalStyles/variables.scss
@@ -20,19 +20,10 @@ $grey: #CFCFCF; //small text
 $green: linear-gradient(114.93deg, #618967 5.11%, #72a479 94%); //buttons
 $lightGreen: #65906C; //contact link
 
-$blackBackground: #403C3B;
+$lightGreen: #403C3B;
 $blackBackgroundGradient: linear-gradient(#211F20, #44403F);
 
 $darkGrey: #504b4a;
 $blackGradient: linear-gradient(90deg, #211F20 0%, rgba(68, 64, 63, 0) 100%);   //preview
 
 $blackBackgroundLight: linear-gradient(90deg, #494544 0%, #504B4A 100%); //cards
-
-
-// mixins
-
-@mixin container {
-	max-width: 1440px;
-	padding: 0 20px;
-	margin: 0 auto;
-}
