--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,14 +1,17 @@
-@import "../../globalStyles/variables/scss";
+@import "../../globalStyles/variables.scss";
+@import "../../globalStyles/mixins.scss";
 
 .navbar {
 	padding-top: 20px;
-	background: $blackGradient;
-	border-bottom: 1px solid darkGrey;
+	background: $blackBackgroundGradient;
+
+	&__wrapper {
+		border-bottom: 10px solid $darkGrey;
+		padding-bottom: 20px;
+	}
 
 	&__container {
-		max-width: 1440px;
-		padding: 0 20px;
-		margin: 0 auto;
+		@include container;
 	}
 
 	&__list {
@@ -18,6 +21,31 @@
 		align-items: center;
 		padding-left: 0;
 		overflow-x: scroll;
+
+		scrollbar-color: $transparent $transparent;
+		scrollbar-width: auto;
+
+		&::-webkit-scrollbar {
+			width: 0;
+		}
+
+		&::-webkit-scrollbar {
+			// width: 24px; /* ширина для вертикального скролла */
+			height: 8px; /* высота для горизонтального скролла */
+			background-color: $transparent;
+		}
+
+		&::-webkit-scrollbar-thumb {
+			background-color: $transparent;
+			border-radius: 9em;
+			box-shadow: inset 0px 0px 0px #f3faf7;
+		}
+
+		&::-webkit-scrollbar-thumb:hover {
+		/* ползунок скроллбара */
+		background-color: $transparent;
+	}
+
 	}
 
 	&__item {
@@ -30,6 +58,8 @@
 		text-decoration: none;
 		cursor: pointer;
 		font-size: 14px;
+		white-space: nowrap;
+		padding: 25px 25px;
 
 			&:focus {
 				border: 1px solid white;
@@ -38,7 +68,7 @@
 	}
 
 	&__item.active {
-		border-bottom: 1px solid $lightGreen;
+		border-bottom: 3px solid $scrollNavBar;
 		padding-bottom: 26px;
 
 	}
@@ -67,7 +97,34 @@
 	background: $blackBackgroundGradient;
 
 		&__list {
+			overflow-x: auto;
 
+			scrollbar-color: $grey $darkGrey;
+			scrollbar-width: auto;
+
+			&::-webkit-scrollbar {
+				width: 0;
+			}
+
+			&::-webkit-scrollbar {
+				// width: 24px; /* ширина для вертикального скролла */
+				height: 6px; /* высота для горизонтального скролла */
+				background-color: $grey;
+				border-radius: 9em;
+			}
+
+			&::-webkit-scrollbar-thumb {
+				background-color: $scrollNavBar;
+				border-radius: 9em;
+				box-shadow: inset 0px 0px 0px #f3faf7;
+			}
+
+			&::-webkit-scrollbar-thumb:hover {
+			/* ползунок скроллбара */
+				background-color: $grey;
+				cursor: pointer;
+				background-color: $white;
+			}
 		}
 
 		&__item {
