--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -2,12 +2,17 @@
 @import "../../globalStyles/mixins.scss";
 
 .navbar {
-	padding-top: 20px;
 	background: $blackBackgroundGradient;
+	padding-bottom: 10px;
+	position: relative;
 
-	&__wrapper {
-		border-bottom: 10px solid $darkGrey;
-		padding-bottom: 20px;
+	&:before {
+		@include pseudo;
+		width: 100%;
+		height: 1px;
+		background-color: $grey;
+		bottom: 11px;
+		z-index: 0;
 	}
 
 	&__container {
@@ -21,6 +26,9 @@
 		align-items: center;
 		padding-left: 0;
 		overflow-x: scroll;
+		padding-top: 16px;
+		position: relative;
+		z-index: 2;
 
 		scrollbar-color: $transparent $transparent;
 		scrollbar-width: auto;
@@ -31,7 +39,7 @@
 
 		&::-webkit-scrollbar {
 			// width: 24px; /* ширина для вертикального скролла */
-			height: 8px; /* высота для горизонтального скролла */
+			height: 0; /* высота для горизонтального скролла */
 			background-color: $transparent;
 		}
 
@@ -51,7 +59,12 @@
 	&__item {
 		align-items: center;
 		display: flex;
-		margin-bottom: 5px;
+		padding-top: 7px;
+		padding: 7px 25px 0 25px;
+
+		&:first-of-type {
+			padding-left: 0;
+		}
 
 		a {
 		color: $white;
@@ -59,7 +72,6 @@
 		cursor: pointer;
 		font-size: 14px;
 		white-space: nowrap;
-		padding: 25px 25px;
 
 			&:focus {
 				border: 1px solid white;
@@ -67,16 +79,15 @@
 		}
 	}
 
-	&__item.active {
+	&__item.active a{
 		border-bottom: 3px solid $scrollNavBar;
-		padding-bottom: 26px;
-
+		padding-bottom: 21px;
+		position: relative;
 	}
 }
 
 @media screen and (min-width: 768px) {
 	.navbar {
-	padding-top: 20px;
 	background: $blackBackgroundGradient;
 
 	&__list {
@@ -93,7 +104,7 @@
 }
 @media screen and (min-width: 1024px) {
 	.navbar {
-	padding: 20px 0;
+
 	background: $blackBackgroundGradient;
 
 		&__list {
@@ -128,6 +139,8 @@
 		}
 
 		&__item {
+
+			padding: 7px 25px 5px 25px;
 
 			a {
 			font-size: 18px;
