--- a/src/globalStyles/variables.scss
+++ b/src/globalStyles/variables.scss
@@ -15,18 +15,22 @@ $full-hd: 1920px;
 
 //colors
 
-$white: #fff;   //main text
-$grey: #CFCFCF; //small text
+$white: #fff; //main text
+$grey: #cfcfcf; //small text
 $green: linear-gradient(114.93deg, #618967 5.11%, #72a479 94%); //buttons
-$lightGreen: #65906C; //contact link
+$lightGreen: #65906c; //contact link
 
-$lightDark: #403C3B;
-$blackBackgroundGradient: linear-gradient(#211F20, #44403F);
+$lightDark: #403c3b;
+$blackBackgroundGradient: linear-gradient(#211f20, #44403f);
 
 $darkGrey: #504b4a;
-$blackGradient: linear-gradient(90deg, #211F20 0%, rgba(68, 64, 63, 0) 100%);   //preview
+$blackGradient: linear-gradient(
+	90deg,
+	#211f20 0%,
+	rgba(68, 64, 63, 0) 100%
+); //preview
 
-$blackBackgroundLight: linear-gradient(90deg, #494544 0%, #504B4A 100%); //cards
+$blackBackgroundLight: linear-gradient(90deg, #494544 0%, #504b4a 100%); //cards
 
 $scrollNavBar: #618967;
 $transparent: transparent;
