--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -2,7 +2,7 @@
 @import "../../globalStyles/mixins.scss";
 
 .navbar {
-	background: $blackBackgroundGradient;
+	background: $menuNavBarBackground;
 	padding-bottom: 10px;
 	position: relative;
 
@@ -10,7 +10,7 @@
 		@include pseudo;
 		width: 100%;
 		height: 1px;
-		background-color: $grey;
+		background-color: $secondaryText;
 		bottom: 11px;
 		z-index: 0;
 	}
@@ -30,7 +30,7 @@
 		position: relative;
 		z-index: 2;
 
-		scrollbar-color: $transparent $transparent;
+		scrollbar-color: transparent transparent;
 		scrollbar-width: auto;
 
 		&::-webkit-scrollbar {
@@ -40,18 +40,18 @@
 		&::-webkit-scrollbar {
 			// width: 24px; /* ширина для вертикального скролла */
 			height: 0; /* высота для горизонтального скролла */
-			background-color: $transparent;
+			background-color: transparent;
 		}
 
 		&::-webkit-scrollbar-thumb {
-			background-color: $transparent;
+			background-color: transparent;
 			border-radius: 9em;
 			box-shadow: inset 0px 0px 0px #f3faf7;
 		}
 
 		&::-webkit-scrollbar-thumb:hover {
 			/* ползунок скроллбара */
-			background-color: $transparent;
+			background-color: transparent;
 		}
 	}
 
@@ -66,7 +66,7 @@
 		}
 
 		a {
-			color: $white;
+			color: $primaryText;
 			text-decoration: none;
 			cursor: pointer;
 			font-size: 14px;
@@ -87,7 +87,7 @@
 
 @media screen and (min-width: 768px) {
 	.navbar {
-		background: $blackBackgroundGradient;
+		background: $menuNavBarBackground;
 
 		&__list {
 		}
@@ -101,12 +101,12 @@
 }
 @media screen and (min-width: 1024px) {
 	.navbar {
-		background: $blackBackgroundGradient;
+		background: $menuNavBarBackground;
 
 		&__list {
 			overflow-x: auto;
 
-			scrollbar-color: $grey $darkGrey;
+			scrollbar-color: $secondaryText $inputSearchColor;
 			scrollbar-width: auto;
 
 			&::-webkit-scrollbar {
@@ -116,7 +116,7 @@
 			&::-webkit-scrollbar {
 				// width: 24px; /* ширина для вертикального скролла */
 				height: 6px; /* высота для горизонтального скролла */
-				background-color: $grey;
+				background-color: $secondaryText;
 				border-radius: 9em;
 			}
 
@@ -128,9 +128,9 @@
 
 			&::-webkit-scrollbar-thumb:hover {
 				/* ползунок скроллбара */
-				background-color: $grey;
+				background-color: $secondaryText;
 				cursor: pointer;
-				background-color: $white;
+				background-color: $primaryText;
 			}
 		}
 
