horisontalScrool ActiveLinks NavBar

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -11,6 +11,7 @@
 		width: 100%;
 		height: 1px;
 		background-color: $secondaryText;
+		opacity: 0.1;
 		bottom: 11px;
 		z-index: 0;
 	}
@@ -60,6 +61,7 @@
 		display: flex;
 		padding-top: 7px;
 		padding: 7px 25px 0 25px;
+		scroll-snap-align: start;
 
 		&:first-of-type {
 			padding-left: 0;
@@ -88,10 +90,6 @@
 @media screen and (min-width: 768px) {
 	.navbar {
 		background: $menuNavBarBackground;
-
-		&__list {
-		}
-
 		&__item {
 			a {
 				font-size: 18px;
@@ -103,36 +101,40 @@
 	.navbar {
 		background: $menuNavBarBackground;
 
-		&__list {
-			overflow-x: auto;
-
-			scrollbar-color: $secondaryText $inputSearchColor;
-			scrollbar-width: auto;
-
-			&::-webkit-scrollbar {
-				width: 0;
-			}
-
-			&::-webkit-scrollbar {
-				// width: 24px; /* ширина для вертикального скролла */
-				height: 6px; /* высота для горизонтального скролла */
-				background-color: $secondaryText;
-				border-radius: 9em;
-			}
-
-			&::-webkit-scrollbar-thumb {
-				background-color: $scrollNavBar;
-				border-radius: 9em;
-				box-shadow: inset 0px 0px 0px #f3faf7;
-			}
-
-			&::-webkit-scrollbar-thumb:hover {
-				/* ползунок скроллбара */
-				background-color: $secondaryText;
-				cursor: pointer;
-				background-color: $primaryText;
-			}
+		&:before {
+			bottom: 16px;
 		}
+
+		// &__list {
+		// 	overflow-x: auto;
+
+		// 	scrollbar-color: $secondaryText $inputSearchColor;
+		// 	scrollbar-width: auto;
+
+		// 	&::-webkit-scrollbar {
+		// 		width: 0;
+		// 	}
+
+		// 	&::-webkit-scrollbar {
+		// 		// width: 24px; /* ширина для вертикального скролла */
+		// 		height: 6px; /* высота для горизонтального скролла */
+		// 		background-color: $secondaryText;
+		// 		border-radius: 9em;
+		// 	}
+
+		// 	&::-webkit-scrollbar-thumb {
+		// 		background-color: $scrollNavBar;
+		// 		border-radius: 9em;
+		// 		box-shadow: inset 0px 0px 0px #f3faf7;
+		// 	}
+
+		// 	&::-webkit-scrollbar-thumb:hover {
+		// 		/* ползунок скроллбара */
+		// 		background-color: $secondaryText;
+		// 		cursor: pointer;
+		// 		background-color: $primaryText;
+		// 	}
+		// }
 
 		&__item {
 			padding: 7px 25px 5px 25px;
