--- a/src/layout/Header/Header.scss
+++ b/src/layout/Header/Header.scss
@@ -4,6 +4,12 @@
 	background: $headerBackground;
 	box-shadow: 0px 30px 60px rgba(34, 31, 32, 0.2);
 	font-family: "Ubuntu-Light";
+	min-height: 96px;
+	min-width: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 10;
 
 	&__container {
 		display: flex;
