--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -2,6 +2,10 @@
 @import "../../globalStyles/mixins.scss";
 
 .main-content {
+	position: sticky;
+	top: 179px;
+
+
 	display: grid;
 	align-items: flex-start;
 	justify-content: flex-start;
