--- a/src/components/Benefits/Benefits.scss
+++ b/src/components/Benefits/Benefits.scss
@@ -2,58 +2,141 @@
 @import "../../globalStyles/mixins.scss";
 
 .benefits {
+    display: flex;
+    justify-content: center;
     background: transparent;
     z-index: 0;
-
+    position: relative;
+    height: 510px;
 
     &__container {
         max-width: 1363px;
         min-width: 320px;
-        min-height: 610px;
-        position: relative;
+        height: 610px;
+        position: absolute;
         margin: 0 auto;
         display: flex;
+        align-items: center;
         background: $headerBackground;
         padding: 0 20px;
-        background-size: 100%;
-        background-image: url('../../../public/images/curiza.jpg');
+        background-image: url("../../../public/images/curiza.jpg");
         background-repeat: no-repeat;
+        background-size: contain;
         background-position: right;
 
         &::after {
             @include pseudo;
             min-width: 100%;
-            min-height: inherit;
-            background: linear-gradient(90deg, rgba(33, 31, 32, 1) 30%, rgba(255, 255, 255, 0) 100%);
+            min-height: 100%;
             top: 0;
             left: 0;
             z-index: 1;
+            background: linear-gradient(90deg, rgba(33, 31, 32, 1) 30%, rgba(255, 255, 255, 0) 100%);
         }
     }
 
-    &__description-block {
+    .description-block {
         color: $primaryText;
+        font-family: "Ubuntu-Light";
         position: relative;
         z-index: 3;
+        width: 50%;
+        left: 70px;
+        display: none;
+
+        &__title {
+            font-style: normal;
+            font-weight: 700;
+            font-size: 32px;
+            line-height: 39px;
+            margin-bottom: 26px;
+        }
+
+        &__subtitle {
+            font-style: normal;
+            font-weight: 400;
+            font-size: 20px;
+            line-height: 25px;
+            margin-bottom: 60px;
+        }
+
+        &__button {
+            width: 223px;
+            height: 59px;
+            background: rgba(255, 255, 255, 0.05);
+            color: $primaryText;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            backdrop-filter: blur(2.5px);
+            border-radius: 10px;
+            text-transform: uppercase;
+            padding-right: 25px;
+            padding-left: 54px;
+            font-style: normal;
+            font-weight: 700;
+            font-size: 13px;
+            line-height: 16px;
+            cursor: pointer;
+            transition: all 1s ease;
+        }
+
+        &__button:hover {
+            box-shadow: 0px 40px 50px rgba(0, 0, 0, 0.4);
+            transition: all 1s ease;
+            color: $tileTextColor;
+        }
     }
 
     &__buttons {
         display: grid;
-        grid-template-columns: repeat(2, 228px);
-        grid-template-rows: repeat(2, 228px);
-        position: relative;
+        grid-template-columns: repeat(2, 243px);
+        grid-template-rows: repeat(2, 243px);
+        position: absolute;
         z-index: 2;
-        right: 20px;
+        right: 113px;
         top: 10%;
 
         &>* {
             background: rgba(80, 75, 74, 0.9);
             backdrop-filter: blur(5px);
+            border: 0;
+            cursor: pointer;
         }
     }
 
     &__button {
+        display: grid;
+        gap: 10px;
+        align-content: center;
+        justify-items: center;
         width: 228px;
         height: 226px;
+        transition: all 1s ease;
+        font-family: "Ubuntu-Light";
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 25px;
+        color: white;
+
+        svg {
+            transition: all 1s ease;
+            fill: white;
+        }
+    }
+
+
+    .description-block.active {
+        display: block;
+    }
+
+    &__button:hover {
+        box-shadow: 0px 40px 50px rgba(0, 0, 0, 0.4);
+        transition: all 1s ease;
+        color: $tileTextColor;
+
+        svg {
+            transition: all 1s ease;
+            fill: $tileTextColor;
+        }
     }
 }
