--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: "Ubuntu-Italic";
     src: local("Ubuntu-Italic"),
-     url("./fonts/Ubuntu-Italic.ttf") format("truetype");
+     url("./fonts/Ubuntu/Ubuntu-Italic.ttf") format("truetype");
     font-weight: 300;
     font-display: swap;
 } /*Italic*/
@@ -9,7 +9,7 @@
 @font-face {
     font-family: "Ubuntu-Light";
     src: local("Ubuntu-Light"),
-     url("./fonts/Ubuntu-Light.ttf") format("truetype");
+     url("./fonts/Ubuntu/Ubuntu-Light.ttf") format("truetype");
     font-weight: light;
     font-display: swap;
 } /*Light*/
@@ -17,7 +17,7 @@
 @font-face {
     font-family: "Ubuntu-LightItalic";
     src: local("Ubuntu-LightItalic"),
-     url("./fonts/Ubuntu-LightItalic.ttf") format("truetype");
+     url("./fonts/Ubuntu/Ubuntu-LightItalic.ttf") format("truetype");
     font-weight: light;
     font-display: swap;
 } /*Light-Italic*/
@@ -25,7 +25,7 @@
 @font-face {
     font-family: "Ubuntu-Medium";
     src: local("Ubuntu-Medium"),
-     url("./fonts/Ubuntu-Medium.ttf") format("truetype");
+     url("./fonts/Ubuntu/Ubuntu-Medium.ttf") format("truetype");
     font-weight: medium;
     font-display: swap;
 } /*Medium*/
@@ -33,7 +33,7 @@
 @font-face {
     font-family: "Ubuntu-MediumItalic";
     src: local("Ubuntu-Medium"),
-     url("./fonts/Ubuntu-MediumItalic.ttf") format("truetype");
+     url("./fonts/Ubuntu/Ubuntu-MediumItalic.ttf") format("truetype");
     font-weight: medium;
     font-display: swap;
 } /*Medium-Italic*/
@@ -41,7 +41,7 @@
 @font-face {
     font-family: "Ubuntu-Bold";
     src: local("Ubuntu-Bold"),
-     url("./fonts/Ubuntu-Bold.ttf") format("truetype");
+     url("./fonts/Ubuntu/Ubuntu-Bold.ttf") format("truetype");
     font-weight: bold;
     font-display: swap;
 } /*Bold*/
@@ -49,7 +49,15 @@
 @font-face {
     font-family: "Ubuntu-BoldItalic";
     src: local("Ubuntu-BoldItalic"),
-     url("./fonts/Ubuntu-BoldItalic.ttf") format("truetype");
+     url("./fonts/Ubuntu/Ubuntu-BoldItalic.ttf") format("truetype");
     font-weight: bold;
     font-display: swap;
 } /*Bold-Italic*/
+
+@font-face {
+    font-family: "Russo";
+    src: local("Russo"),
+     url("./fonts/Russo/RussoOne-Regular.ttf") format("truetype");
+    font-weight: 400;
+    font-display: swap;
+} /*Regular*/
