--- a/src/App.scss
+++ b/src/App.scss
@@ -3,12 +3,30 @@
     box-sizing: border-box;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 html {
   scroll-behavior: smooth;
 }
 
 body {
 	font-family: "Ubuntu-Light", "Arial", sans-serif;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.main {
+  flex: 1 0 auto;
+}
+.footer {
+  flex: 0 0 auto;
 }
 
 a {
