--- a/src/components/Benefits/Benefits.scss
+++ b/src/components/Benefits/Benefits.scss
@@ -35,7 +35,8 @@
     }
 
     .descriptions {
-        position: relative;
+        display: flex;
+        justify-content: space-between;
         top: 0;
         left: 0;
         z-index: 3;
@@ -69,7 +70,6 @@
     .description-block {
         color: $primaryText;
         font-family: "Ubuntu-Light";
-        position: relative;
         z-index: 3;
         width: 75%;
 		top: 0;
@@ -97,10 +97,10 @@
         display: grid;
         grid-template-columns: repeat(1, 71px);
         grid-template-rows: repeat(4, 71px);
-        position: absolute;
         z-index: 2;
         top: 10px;
-		right: 10px;
+		right: 0;
+        margin: 0;
         max-width: 40%;
 
         &>* {
@@ -110,6 +110,7 @@
             cursor: pointer;
         }
     }
+
 
     &__button {
         display: grid;
@@ -181,6 +182,10 @@
             }
         }
 
+        .description-block.active {
+            display: block;
+        }
+
         .description-block {
             top: 0;
             max-width: 75%;
@@ -217,6 +222,10 @@
             padding: 0 20px;
         }
 
+        .description-block.active {
+            display: block;
+        }
+
         .description-block {
             max-width: 50%;
 
@@ -245,11 +254,6 @@
             span {
                 display: block;
             }
-        }
-
-
-        .description-block.active {
-            display: block;
         }
     }
 }
